fix nav spacing, fix birdCard on birdList spacing

--- a/src/components/BirdCard/BirdCard.module.css
+++ b/src/components/BirdCard/BirdCard.module.css
@@ -1,6 +1,6 @@
 .birdCard {
   width: 100%;
-  height: 320px;
+  height: 340px;
   padding: 14px 21px;
   border-radius: 5px;
   border: 1px solid var(--border);
@@ -72,7 +72,7 @@
   text-overflow: ellipsis;
   -webkit-box-orient: vertical;
   color: rgb(99, 124, 164);
-  padding: 20px 0 20px 0;
+  padding: 0;
 }
 
 .birdCard a {
