--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -5,7 +5,7 @@
   height: 80px;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-evenly;
   justify-items: flex-end;
   position: fixed; 
   padding: 14px 21px;
@@ -15,6 +15,7 @@
 
 .nav img {
   width: 50px;
+  margin-bottom: 20%;
 }
 
 .nav ul {
@@ -23,18 +24,22 @@
   display: flex;
   list-style: none;
   font-weight: 500;
-  font-size: 1.2em;
+  font-size: .75em;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
   font-family: 'Montserrat', sans-serif;
   color: white;
   text-decoration: none;
+  padding: 0;
 }
 
 .nav li {
   text-align: center;
-  margin: 0 24px;
+  display: flex;
+  justify-content: center;
+  padding: 0 20px;
 }
+
 .nav h2 {
   font-size: 1.4em;
   margin: 0 24px 0 42px;
@@ -44,7 +49,11 @@
   font-family: 'Montserrat', sans-serif;
   color: rgb(240, 210, 189);
   text-decoration: none;
+  font-size: 1.4em;
+  text-align: center;
+  padding: 0;
 }
+
 .nav a:hover {
   color: rgb(87, 74, 226);
 }
